# cosyvoice-mms

./: .gitignore  .gitlab-ci.yml  DEPLOYMENT.md  DOCKER.md  Dockerfile  README.md  docker_start.sh  plan.md  pyproject.toml  requirements.txt  start.sh  test_instruct.py
.opencode/: opencode.db  opencode.db-shm  opencode.db-wal
CosyVoice/cosyvoice/cli/: frontend.py
ci/: aws-build.sh  build.sh  docker-hub-build.sh
scripts/: README.md  benchmark_tts.py  check_env.py  create_dummy_voice.py  download_cosyvoice3.py  download_models.py  list_voices.py  test_api.py  test_api_performance.py  test_kokoro_malay.py  test_startup.py  verify_dockerhub_push.sh
src/: config.py  main.py
src/core/: service.py
src/engines/: cosyvoice_engine.py  mms_engine.py
static/: test_stream.html
