[project]
name = "cosyvoice-mms"
version = "0.1.0"
description = "English (CosyVoice 2.0) + Malay (MMS) TTS Service"
readme = "README.md"
requires-python = ">=3.9, <3.12"
dependencies = [
    # API & Web
    "fastapi>=0.115.6",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "loguru",
    
    # Core AI Frameworks
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "transformers>=4.51.3",
    "lightning==2.2.4",
    "modelscope>=1.20.0",
    "onnxruntime-gpu>=1.18.0",
    
    # Audio Processing
    "librosa>=0.10.2",
    "soundfile>=0.12.1",
    "pyworld>=0.3.4",
    "scipy",
    "numpy<2.0.0",
    
    # CosyVoice Specific (Flow, Conformer, Diffusion)
    "conformer==0.3.2",
    "diffusers>=0.29.0",
    "hyperpyyaml>=1.2.2",
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "einops",
    "x-transformers>=2.11.24",
    
    # Text Analysis (Front-end)
    "wetext>=0.0.4",
    "inflect>=7.3.1",
    "openai-whisper>=20231117",
    "jieba",
    "snownlp",
    
    # Utilities
    "gdown>=5.1.0",
    "wget>=3.2",
    "protobuf>=4.25",
    "tensorboard>=2.14.0",
    "rich>=13.7.1",
    "pyarrow>=18.1.0",
    "networkx>=3.1",
    "matplotlib>=3.7.5",
    "kokoro-onnx>=0.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
]

[tool.uv]
default-groups = ["dev"]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
index-strategy = "unsafe-best-match"
